--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app'//, ':tun2socks', ':tun2socks-sources'
+include ':app', ':tun2socks', ':tun2socks-sources'
 rootProject.name = "ZTestGoLibAar"
